PIP-514 Update pom.xml to use jib-maven-plugin