@@ -16,6 +16,11 @@
     <properties>
         <packageName>${project.artifactId}</packageName>
         <execFinalName>${project.build.finalName}.jar</execFinalName>
+        <docker.registry>docker.io</docker.registry>
+        <docker.allowInsecureRegistries>false</docker.allowInsecureRegistries>
+        <docker.image.prefix>snomedinternational</docker.image.prefix>
+        <docker.image.tag>latest</docker.image.tag>
+        <docker.base-image>amazoncorretto:17</docker.base-image>
     </properties>
 
     <dependencies>
@@ -170,6 +175,53 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>docker-amd64</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
+                        <version>3.3.1</version>
+                        <configuration>
+                            <!-- Override the architecture to linux/amd64 -->
+                            <from>
+                                <image>${docker.base-image}</image>
+                                <platforms>
+                                    <platform>
+                                        <architecture>amd64</architecture>
+                                        <os>linux</os>
+                                    </platform>
+                                </platforms>
+                            </from>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>docker-arm64</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
+                        <version>3.3.1</version>
+                        <configuration>
+                            <from>
+                                <image>${docker.base-image}</image>
+                                <platforms>
+                                    <platform>
+                                        <architecture>arm64</architecture>
+                                        <os>linux</os>
+                                    </platform>
+                                </platforms>
+                            </from>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 
     <repositories>
@@ -243,6 +295,56 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <!-- Docker Image Build -->
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.4.0</version>
+                <configuration>
+                    <container>
+                        <labels>
+                            <author>SNOMED International &lt;tooling@snomed.org&gt;</author>
+                        </labels>
+                        <mainClass>org.snomed.otf.reasoner.server.Application</mainClass>
+                        <environment>
+                            <application.title>${project.name}</application.title>
+                            <application.version>${project.version}</application.version>
+                        </environment>
+                        <jvmFlags>
+                            <jvmFlag>-Djava.security.egd=file:/dev/./urandom</jvmFlag>
+                            <jvmFlag>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmFlag>
+                        </jvmFlags>
+                        <ports>
+                            <port>8089</port>
+                        </ports>
+                        <volumes>
+                            <volume>/tmp</volume>
+                        </volumes>
+                        <workingDirectory>/app</workingDirectory>
+                    </container>
+                    <from>
+                        <image>${docker.base-image}</image>
+                        <platforms>
+                            <platform>
+                                <architecture>arm64</architecture>
+                                <os>linux</os>
+                            </platform>
+                            <platform>
+                                <architecture>amd64</architecture>
+                                <os>linux</os>
+                            </platform>
+                        </platforms>
+                    </from>
+                    <to>
+                        <image>${docker.registry}/${docker.image.prefix}/${project.artifactId}</image>
+                        <tags>
+                            <tag>${docker.image.tag}</tag>
+                            <tag>${project.version}</tag>
+                        </tags>
+                    </to>
+                    <allowInsecureRegistries>${docker.allowInsecureRegistries}</allowInsecureRegistries>
+                </configuration>
             </plugin>
         </plugins>
     </build>
